Added online admission application form

--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
                     <li><a href="#home">Home</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="student-portal.html">Student Portal</a></li>
-                    <li><a href="teacher-portal.html">Teacher Portal</a></li>
+                    <li><a href="student-portal.html">Teacher Portal</a></li>
                     <li><a href="#gallery">Gallery</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
@@ -548,7 +548,7 @@
             <h1>Empowering Minds, Transforming Futures</h1>
             <p>Premier educational institution offering world-class education from Nursery to Secondary level in Badagry, Lagos</p>
             <div class="hero-buttons">
-                <a href="#admission" class="btn btn-primary">Apply Now for 2025/2026</a>
+                <a href="admission.html" class="btn btn-primary">Apply Now for 2025/2026</a>
                 <a href="#about" class="btn btn-outline">Learn More</a>
             </div>
         </div>
@@ -558,7 +558,7 @@
     <section id="admission" class="admission-banner">
         <h2><i class="fas fa-bell"></i> Admissions Open!</h2>
         <p>We are excited to announce that admissions for the 2025/2026 academic session are now open! Join a community that values excellence, creativity, and character development.</p>
-        <a href="student-portal.html" class="btn btn-primary">Start Your Application</a>
+        <a href="admission.html" class="btn btn-primary">Start Your Application</a>
     </section>
 
     <!-- Features Section -->
