--- a/index.html
+++ b/index.html
@@ -528,6 +528,7 @@
                 <ul id="nav-links">
                     <li><a href="#home">Home</a></li>
                     <li><a href="#about">About</a></li>
+                    <li><a href="admin.html">Admin portal</a></li>
                     <li><a href="student-portal.html">Student Portal</a></li>
                     <li><a href="student-portal.html">Teacher Portal</a></li>
                     <li><a href="#gallery">Gallery</a></li>
