--- a/admin.html
+++ b/admin.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin Dashboard - Fountain Prime School</title>
+    <title>Admin Dashboard - Motivlab School</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         * {
@@ -608,7 +608,7 @@
             <div class="login-header">
                 <i class="fas fa-shield-alt"></i>
                 <h1>Admin Login</h1>
-                <p>Fountain Prime School Management System</p>
+                <p>Motivlab Management System</p>
             </div>
 
             <div class="error-message" id="errorMessage">
