--- a/admission.html
+++ b/admission.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Online Admission - Fountain Prime School</title>
+    <title>Online Admission - Motivlab School</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         * {
@@ -269,7 +269,7 @@
         <div class="admission-card">
             <div class="admission-header">
                 <h1><i class="fas fa-graduation-cap"></i> Online Admission</h1>
-                <p>Apply for admission to Fountain Prime School</p>
+                <p>Apply for admission to Motivlab School</p>
                 <span class="session-badge">2025/2026 Academic Session</span>
             </div>
 
