--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fountain Prime School - Empowering Minds, Transforming Futures</title>
+    <title>Motivlab School Demo - Empowering Minds, Transforming Futures</title>
     <meta name="description" content="Premier educational institution in Badagry, Lagos offering quality education from Nursery to Secondary level.">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
@@ -522,7 +522,7 @@
         <div class="nav-container">
             <div class="logo">
                 <i class="fas fa-graduation-cap"></i>
-                <span>Fountain Prime</span>
+                <span>Motivlab Demo</span>
             </div>
             <nav>
                 <ul id="nav-links">
@@ -564,7 +564,7 @@
 
     <!-- Features Section -->
     <section id="about" class="features">
-        <h2 class="section-title">Why Choose Fountain Prime?</h2>
+        <h2 class="section-title">Why Choose Motivlab demo?</h2>
         <div class="features-grid">
             <div class="feature-card">
                 <div class="feature-icon">
@@ -621,7 +621,7 @@
                 <i class="fas fa-chevron-down"></i>
             </div>
             <div class="faq-answer">
-                Fountain Prime School is a co-educational institution located in Apa, Badagry West LCDA, Lagos State, offering comprehensive education from Nursery through Primary to Secondary levels. We are dedicated to nurturing young minds with academic excellence, moral values, and global awareness.
+                Motivlab School is a co-educational institution located in Apa, Badagry West LCDA, Lagos State, offering comprehensive education from Nursery through Primary to Secondary levels. We are dedicated to nurturing young minds with academic excellence, moral values, and global awareness.
             </div>
         </div>
 
@@ -704,7 +704,7 @@
     <!-- Footer -->
     <footer>
         <div class="footer-content">
-            <h3>Fountain Prime School</h3>
+            <h3>Motivlab School</h3>
             <p>Apa, Badagry West LCDA, Lagos State</p>
             <div class="social-links">
                 <a href="#"><i class="fab fa-facebook"></i></a>
@@ -712,7 +712,7 @@
                 <a href="#"><i class="fab fa-instagram"></i></a>
                 <a href="#"><i class="fab fa-whatsapp"></i></a>
             </div>
-            <p>&copy; 2025 Fountain Prime School. All rights reserved.</p>
+            <p>&copy; 2025 Motivlab School. All rights reserved.</p>
         </div>
     </footer>
 
